--- a/manifest.json
+++ b/manifest.json
@@ -7,5 +7,6 @@
     "iot_class": "local_polling",
     "requirements": [],
     "version": "0.42.0",
-    "config_flow": true
+    "config_flow": true,
+    "requirements": ["requests_ntlm==1.1.0"]
   }
